feat: Adjusted all data handlers to use required headers & data entity to follow new object shape
